2009-02-04  Johannes Schmid  <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin
	.glade:
	* plugins/cvs-plugin/anjuta-cvs-plugin.glade:
	* plugins/document-manager/anjuta-document-manager.glade:
	* plugins/language-support-cpp-java/anjuta-language-cpp-java.glade:
	* plugins/message-view/anjuta-message-manager-plugin.glade:
	* plugins/scintilla/anjuta-editor-scintilla.glade:
	* plugins/search/anjuta-search.glade:
	* plugins/sourceview/anjuta-editor-sourceview.glade:
	#567100 – opening Find dialog causes GtkSpinButton warning

2009-02-04  Johannes Schmid  <jhs@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin
	.glade:
	* plugins/cvs-plugin/anjuta-cvs-plugin.glade:
	* plugins/document-manager/anjuta-document-manager.glade:
	* plugins/language-support-cpp-java/anjuta-language-cpp-java.glade:
	* plugins/message-view/anjuta-message-manager-plugin.glade:
	* plugins/scintilla/anjuta-editor-scintilla.glade:
	* plugins/search/anjuta-search.glade:
	* plugins/sourceview/anjuta-editor-sourceview.glade:
	* plugins/subversion/subversion-ui-utils.c (check_input),
	(on_status_command_data_arrived):
	Revert adjumenst changes (#570444 – can't change numbers in preferences dialog)

2009-02-03  Massimo Cora'  <mcora@svn.gnome.org>

	* libanjuta/interfaces/libanjuta.idl:
	* plugins/symbol-db/plugin.c (do_import_system_sources),
	(on_project_root_added), (isymbol_manager_search),
	(isymbol_manager_get_members), (isymbol_manager_search_system),
	(isymbol_manager_search_project), (isymbol_manager_search_file),
	(isymbol_manager_iface_init):
	* plugins/symbol-db/symbol-db-engine-core.c (sdb_engine_init),
	(symbol_db_engine_file_exists),
	(symbol_db_engine_add_new_workspace),
	(symbol_db_engine_project_exists),
	(symbol_db_engine_add_new_project), (sdb_engine_add_new_db_file),
	(symbol_db_engine_update_project_symbols),
	(symbol_db_engine_remove_file), (on_scan_update_buffer_end),
	(symbol_db_engine_update_buffer_symbols):