@@ -47,23 +47,6 @@
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkSpinButton" id="preferences_spin:int:4:1:indent.size">
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="adjustment">4 1 100 1 10 0</property>
-                            <property name="climb_rate">1</property>
-                            <property name="numeric">True</property>
-                          </widget>
-                          <packing>
-                            <property name="left_attach">3</property>
-                            <property name="right_attach">4</property>
-                            <property name="top_attach">1</property>
-                            <property name="bottom_attach">2</property>
-                            <property name="x_options"></property>
-                            <property name="y_options"></property>
-                          </packing>
-                        </child>
-                        <child>
                           <widget class="GtkSpinButton" id="preferences_spin:int:4:1:tabsize">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -79,20 +62,6 @@
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label123">
-                            <property name="visible">True</property>
-                            <property name="xalign">0</property>
-                            <property name="yalign">0</property>
-                            <property name="label" translatable="yes">Indentation size in spaces:</property>
-                          </widget>
-                          <packing>
-                            <property name="right_attach">3</property>
-                            <property name="top_attach">1</property>
-                            <property name="bottom_attach">2</property>
-                            <property name="y_options">GTK_EXPAND</property>
-                          </packing>
-                        </child>
-                        <child>
                           <widget class="GtkLabel" id="label122">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
@@ -103,6 +72,18 @@
                             <property name="right_attach">3</property>
                             <property name="y_options">GTK_EXPAND</property>
                           </packing>
+                        </child>
+                        <child>
+                          <placeholder/>
+                        </child>
+                        <child>
+                          <placeholder/>
+                        </child>
+                        <child>
+                          <placeholder/>
+                        </child>
+                        <child>
+                          <placeholder/>
                         </child>
                         <child>
                           <placeholder/>
